# mr

./: LICENSE  README.md  mr.toml  pyproject.toml
mr/: auth.py  cmd_list.py  cmd_start.py  cmdline.py  config.py  console.py  error.py  jenkins_client.py  mr.py
